--- a/content/resources/21g-040s12.md
+++ b/content/resources/21g-040s12.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Blends and reflections of traditional and modern aspects of India. Image
   by MIT OpenCourseWare.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-040-a-passage-to-india-introduction-to-modern-indian-culture-and-society-spring-2012/3efa508b96cee8228d82c81c6d93d632_21g-040s12.jpg
+file: /media/courses/21g-040-a-passage-to-india-introduction-to-modern-indian-culture-and-society-spring-2012/3efa508b96cee8228d82c81c6d93d632_21g-040s12.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Blends and reflections of traditional and modern aspects of India. (Image
@@ -10,6 +10,8 @@ image_metadata:
   credit: Image by MIT OpenCourseWare.
   image-alt: A collage of color and black and white images of people, buildings, and
     landscapes in India.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Blends and reflections of traditional and modern aspects of India
 uid: 3efa508b-96ce-e822-8d82-c81c6d93d632
