--- a/content/resources/21g-040s12-th.md
+++ b/content/resources/21g-040s12-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Blends and reflections of traditional and modern aspects of India. Image
   by MIT OpenCourseWare.
-file: /media/courses/21g-040-a-passage-to-india-introduction-to-modern-indian-culture-and-society-spring-2012/93f5bb0824af42af9bc983ef301a40cd_21g-040s12-th.jpg
+file: /courses/21g-040-a-passage-to-india-introduction-to-modern-indian-culture-and-society-spring-2012/93f5bb0824af42af9bc983ef301a40cd_21g-040s12-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Blends and reflections of traditional and modern aspects of India. (Image
@@ -16,3 +16,5 @@ resourcetype: Image
 title: Blends and reflections of traditional and modern aspects of India (thumbnail)
 uid: 93f5bb08-24af-42af-9bc9-83ef301a40cd
 ---
+Blends and reflections of traditional and modern aspects of India. Image by MIT OpenCourseWare.
+
