--- a/content/resources/21g-040s12.md
+++ b/content/resources/21g-040s12.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Blends and reflections of traditional and modern aspects of India. Image
   by MIT OpenCourseWare.
-file: /media/courses/21g-040-a-passage-to-india-introduction-to-modern-indian-culture-and-society-spring-2012/3efa508b96cee8228d82c81c6d93d632_21g-040s12.jpg
+file: /courses/21g-040-a-passage-to-india-introduction-to-modern-indian-culture-and-society-spring-2012/3efa508b96cee8228d82c81c6d93d632_21g-040s12.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Blends and reflections of traditional and modern aspects of India. (Image
@@ -16,3 +16,5 @@ resourcetype: Image
 title: Blends and reflections of traditional and modern aspects of India
 uid: 3efa508b-96ce-e822-8d82-c81c6d93d632
 ---
+Blends and reflections of traditional and modern aspects of India. Image by MIT OpenCourseWare.
+
