Sync all content

--- a/content/resources/21g-040s12-th.md
+++ b/content/resources/21g-040s12-th.md
@@ -11,10 +11,10 @@ image_metadata:
   image-alt: A collage of color and black and white images of people, buildings, and
     landscapes in India.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Blends and reflections of traditional and modern aspects of India (thumbnail)
 uid: 93f5bb08-24af-42af-9bc9-83ef301a40cd
 ---
 Blends and reflections of traditional and modern aspects of India. Image by MIT OpenCourseWare.
-
