--- a/content/resources/21g-040s12.md
+++ b/content/resources/21g-040s12.md
@@ -11,10 +11,10 @@ image_metadata:
   image-alt: A collage of color and black and white images of people, buildings, and
     landscapes in India.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Blends and reflections of traditional and modern aspects of India
 uid: 3efa508b-96ce-e822-8d82-c81c6d93d632
 ---
 Blends and reflections of traditional and modern aspects of India. Image by MIT OpenCourseWare.
-
